renamed CW to topology - I want to make appendix B more general

--- a/Cohomology of real Grassmannians.tex
+++ b/Cohomology of real Grassmannians.tex
@@ -248,7 +248,7 @@ with coefficients from $\mathbb{F}_2$}
 	\include{chapters/cohomology}
 	\begin{myappendix}
 	\include{appendices/stiefel}
-	\include{appendices/CW}
+	\include{appendices/topology}
 	\include{appendices/fiber_bundles}
 	\end{myappendix}
 \backmatter
