comment about texstudio autocompletion

--- a/Cohomology of real Grassmannians.tex
+++ b/Cohomology of real Grassmannians.tex
@@ -203,6 +203,7 @@
 \mynewtheorem{remarks}
 \mynewtheorem{note}
 \mynewtheorem{notes}
+%% when adding foo, add also \begin{foo} inside [user]\AppData\Roaming\texstudio\completion\user
 
 \makeatletter %for the @ in next line
 \@removefromreset{equation}{chapter} %ch-nmb not resetting eq-nmb
